Add null checking; fix readme for development